--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,18 +1,22 @@
 body{
 	height: 100%;
-
+/*	margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;*/
 }
-
 
 #preferences{
 	position: absolute;
 	font-size: 14px;
 	top: 10px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
 
 #drop{
 	position: absolute;
-	top: 450px;
+	top: 540px;
 	bottom: 10px;
 	left: 10px;
 	right: 10px;
@@ -22,11 +26,42 @@ body{
 	font-size: 25px;
 	font-family: sans-serif;
 	color:#CCC;
-	line-height: 150px;
+	line-height: 60px;
+	margin-left: 40px;
+	margin-right: 40px;
 
 
+}
+table, th, td {
+   height: 40px;
 }
 #drop.hover{
 	color:#8dd0ff;
 	border-color:#8dd0ff;
+}
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
